Fix a couple of warnings